--- a/data/blog/seventh-wave-of-bitcoin-grants.mdx
+++ b/data/blog/seventh-wave-of-bitcoin-grants.mdx
@@ -129,7 +129,7 @@ License: MIT
 [Nutmix](https://cashumints.space/cashu-mint/nutmix/) is a Cashu mint
 implementation focused on ease of use and feature completeness, making it the
 second most advanced mint after Nutshell. Like all proper Chaumian mint
-implementations, nutmix allows custodians to hold funds securely and privately,
+implementations, Nutmix allows custodians to hold funds securely and privately,
 without knowing how users choose to spend their money. By helping to diversify
 mint implementations, Nutmix offers mint operators more options, reducing
 systemic risk and thus bringing us closer to an ecash-based free banking system.
