Edit to add "Bitcoin"
Co-authored-by: Jon Atack <jon@atack.com>

--- a/data/blog/seventh-wave-of-bitcoin-grants.mdx
+++ b/data/blog/seventh-wave-of-bitcoin-grants.mdx
@@ -150,7 +150,7 @@ License: MIT
 their Autonomous Systems (AS) to enhance Bitcoin Core's defense against [eclipse
 attacks](https://bitcoinops.org/en/topics/eclipse-attacks/) by preventing nodes
 from being overly connected to peers controlled by a single entity. By improving
-the accuracy and performance of ASmap generation, ASmap helps Core better manage
+the accuracy and performance of ASmap generation, ASmap helps Bitcoin Core better manage
 peer distribution at the AS level, reducing the risk of network attacks. [Future
 efforts](https://github.com/fjahr/kartograf/issues/11) include optimizing the
 [kartograf](https://github.com/fjahr/kartograf) tool, improving data sources,
