Edit to add "Bitcoin implementation or..."
Co-authored-by: Jon Atack <jon@atack.com>

--- a/data/blog/seventh-wave-of-bitcoin-grants.mdx
+++ b/data/blog/seventh-wave-of-bitcoin-grants.mdx
@@ -155,7 +155,7 @@ peer distribution at the AS level, reducing the risk of network attacks. [Future
 efforts](https://github.com/fjahr/kartograf/issues/11) include optimizing the
 [kartograf](https://github.com/fjahr/kartograf) tool, improving data sources,
 and making ASmap generation faster and more accessible. This work strengthens
-Bitcoin Core's security while offering a valuable tool for other distributed
+Bitcoin Core's security while offering a valuable tool for other Bitcoin implementations or distributed
 systems projects.
 
 Repository: [fjahr/kartograf](https://github.com/fjahr/kartograf)  
