Edit to add "Bitcoin"
Co-authored-by: Jon Atack <jon@atack.com>

--- a/data/blog/seventh-wave-of-bitcoin-grants.mdx
+++ b/data/blog/seventh-wave-of-bitcoin-grants.mdx
@@ -168,7 +168,7 @@ implementation written in Rust. It utilizes Utreexo and PoW Fraud Proofs to
 enable a more trustless and decentralized network. By offering fast
 synchronization, Floresta aims to make Bitcoin nodes more accessible globally,
 reducing reliance on trusted third parties. Its modular design allows for the
-development of new applications, and with the integration of the Core consensus
+development of new applications, and with the integration of the Bitcoin Core consensus
 engine via Rust bindings, it mitigates risks of consensus disparity. Upcoming
 work includes completing comprehensive documentation and making significant
 contributions to improve the node's design, testing, and performance. Floresta's
