Edit to add wording for clarity
Co-authored-by: Jon Atack <jon@atack.com>

--- a/data/blog/seventh-wave-of-bitcoin-grants.mdx
+++ b/data/blog/seventh-wave-of-bitcoin-grants.mdx
@@ -153,7 +153,7 @@ from being overly connected to peers controlled by a single entity. By improving
 the accuracy and performance of ASmap generation, ASmap helps Bitcoin Core better manage
 peer distribution at the AS level, reducing the risk of network attacks. [Future
 efforts](https://github.com/fjahr/kartograf/issues/11) include optimizing the
-[kartograf](https://github.com/fjahr/kartograf) tool, improving data sources,
+[Kartograf](https://github.com/fjahr/kartograf) (IP to ASN mapping) tool, improving data sources,
 and making ASmap generation faster and more accessible. This work strengthens
 Bitcoin Core's security while offering a valuable tool for other Bitcoin implementations or distributed
 systems projects.
