--- a/data/blog/seventh-wave-of-bitcoin-grants.mdx
+++ b/data/blog/seventh-wave-of-bitcoin-grants.mdx
@@ -118,7 +118,7 @@ virtual drives for secure offline signing while offering advanced options like
 coin control and watch-only wallets. Future development will focus on expanding
 to iOS and Android platforms, and refining the user experience through
 real-world user feedback. By providing intuitive access to advanced security
-features, Cove seeks to empower users to adopt safer Bitcoin practices,
+features, Cove seeks to empower users to adopt safer bitcoin practices,
 especially when it comes to holding and using bitcoin in a self-sovereign way.
 
 Repository: [bitcoinppl/cove](https://github.com/bitcoinppl/cove)  
