will -> plans to

--- a/data/blog/seventh-wave-of-bitcoin-grants.mdx
+++ b/data/blog/seventh-wave-of-bitcoin-grants.mdx
@@ -187,7 +187,7 @@ the Bitcoin Core App (BCA), simplifying the process of deploying Bitcoin nodes
 on mobile devices, particularly Android. By enabling users to run fully
 validating nodes via UTXO snapshots, this integration will improve the security
 and decentralization of the Bitcoin network while making it more accessible.
-Over the next 6 to 12 months, the project will deliver a proof-of-concept,
+Over the next 6 to 12 months, the project plans to deliver a proof-of-concept,
 integrate Assume UTXO into BCA, and provide UX improvements and documentation
 updates.
 
