--- a/data/blog/seventh-wave-of-bitcoin-grants.mdx
+++ b/data/blog/seventh-wave-of-bitcoin-grants.mdx
@@ -205,7 +205,7 @@ aligned with [our mission](/mission), we encourage you to [apply for
 funding](/apply).
 
 Please [consider donating](/donate) to support open-source projects and
-developers in the Bitcoin ecosystem.
+developers in the Bitcoin ecosystem:
 
 <center>
     <DonateToGeneralFundButton/>
