Add bayer as editor

--- a/data/blog/bitcoin-grants-september-2024-7th-wave.mdx
+++ b/data/blog/bitcoin-grants-september-2024-7th-wave.mdx
@@ -3,7 +3,7 @@ title: "Seventh Wave of Bitcoin Grants"
 date: '2024-09-24'
 tags: ['OpenSats', 'grants', 'bitcoin', 'wave']
 draft: false
-authors: ['arvin', 'dergigi']
+authors: ['arvin', 'dergigi', 'bayer']
 images: ['/static/images/blog/55-seventh-wave-bitcoin-grants.jpg']
 summary: "OpenSats is funding 8 more open-source projects in the bitcoin ecosystem."
 ---
