--- a/data/blog/bitcoin-grants-september-2024-7th-wave.mdx
+++ b/data/blog/bitcoin-grants-september-2024-7th-wave.mdx
@@ -183,13 +183,13 @@ License: MIT
 [AssumeUTXO](https://bitcoinops.org/en/topics/assumeutxo/) is a feature
 introduced in Bitcoin Core 26 that allows for faster node bootstrapping using
 UTXO snapshots. This project aims to integrate Assume UTXO functionality into
-the [Bitcoin Core App](https://bitcoincore.app/) (BCA), simplifying the process of deploying Bitcoin nodes
-on mobile devices, particularly Android. By enabling users to run fully
-validating nodes via UTXO snapshots, this integration will improve the security
-and decentralization of the Bitcoin network while making it more accessible.
-Over the next 6 to 12 months, the project plans to deliver a proof-of-concept,
-integrate Assume UTXO into BCA, and provide UX improvements and documentation
-updates.
+the [Bitcoin Core App](https://bitcoincore.app/) (BCA), simplifying the process
+of deploying Bitcoin nodes on mobile devices, particularly Android. By enabling
+users to run fully validating nodes via UTXO snapshots, this integration will
+improve the security and decentralization of the Bitcoin network while making it
+more accessible. Over the next 6 to 12 months, the project plans to deliver a
+proof-of-concept, integrate `AssumeUTXO` into BCA, and provide UX improvements
+and documentation updates.
 
 Repository:
 [D33r-Gee/gui-qml](https://github.com/D33r-Gee/gui-qml/tree/sjors-au-sig-custom?tab=License-1-ov-file)  
