--- a/data/blog/bitcoin-grants-september-2024-7th-wave.mdx
+++ b/data/blog/bitcoin-grants-september-2024-7th-wave.mdx
@@ -182,7 +182,7 @@ License: MIT
 
 [AssumeUTXO](https://bitcoinops.org/en/topics/assumeutxo/) is a feature
 introduced in Bitcoin Core 26 that allows for faster node bootstrapping using
-UTXO snapshots. This project aims to integrate Assume UTXO functionality into
+UTXO snapshots. This project aims to integrate `AssumeUTXO` functionality into
 the [Bitcoin Core App](https://bitcoincore.app/) (BCA), simplifying the process
 of deploying Bitcoin nodes on mobile devices, particularly Android. By enabling
 users to run fully validating nodes via UTXO snapshots, this integration will
