Link to General Fund

--- a/data/blog/bitcoin-grants-september-2024-7th-wave.mdx
+++ b/data/blog/bitcoin-grants-september-2024-7th-wave.mdx
@@ -30,7 +30,7 @@ these projects are:
 Thanks to the generosity of our donors, we are able to fund projects that push
 the boundaries of what's possible while addressing key priorities in Bitcoin's
 development. If you want to join us in supporting projects like the above,
-consider donating to our General Fund:
+consider donating to our [General Fund](/funds/general):
 
 <center>
     <DonateToGeneralFundButton/>
