--- a/data/pages/transparency.mdx
+++ b/data/pages/transparency.mdx
@@ -32,6 +32,7 @@ as in the internal and external processes of our organization.
 - [List of Education Grants](/tags/education)
 - [List of LTS Grantees](/tags/lts)
 - [Grant Selection Process](/selection)
+- [Grant Agreement](/docs/agreement.pdf)
 - [EOY Report: 2023](/blog/2023-year-in-review)
 
 ## Ethics & Compliance
