--- a/data/pages/faq-grantees.mdx
+++ b/data/pages/faq-grantees.mdx
@@ -158,7 +158,7 @@ Work done should be reflected in each progress report. Just be honest.
 
 Taking a few days, weekends, and evenings off is perfectly fine and encouraged.
 We shouldn’t have to write this, but past experience forces us to be explicit
-about it: Please do not sacrifice your health and well-being. We encourage our
+about it: **Please do not sacrifice your health and well-being.** We encourage our
 grantees to do good work that is aligned with our mission, but we also encourage
 you to live a balanced life. Do not burn yourself to a crisp.
 
