--- a/data/pages/faq-grantees.mdx
+++ b/data/pages/faq-grantees.mdx
@@ -44,8 +44,7 @@ changes so that you can continue building under sustainable conditions.
 
 ### I have a question; whom should I email?
 
-All inquiries should be sent to
-[support@opensats.org](mailto:support@opensats.org). Do not email individuals,
+All inquiries should be sent to support@opensats.org. Do not email individuals,
 or else our response may be delayed.
 
 ### When will I receive my first grant payment?
@@ -138,11 +137,11 @@ The short answer is yes, within reason. Your work must be aligned with [our
 mission](/mission) and meet our criteria of being free and open-source within
 the Bitcoin and/or Nostr ecosystems.
 
-Reach out to us if you'd like to explore this option further.
+[Reach out to us][c] if you'd like to explore this option further.
 
 ### I wasn’t able to work on my project as much as I expected, what should I do?
 
-Reach out to us to discuss the best path forward as soon as possible.
+[Reach out to us][c] to discuss the best path forward as soon as possible.
 
 ### Can I pause my grant?
 
@@ -158,9 +157,9 @@ Work done should be reflected in each progress report. Just be honest.
 
 Taking a few days, weekends, and evenings off is perfectly fine and encouraged.
 We shouldn’t have to write this, but past experience forces us to be explicit
-about it: **Please do not sacrifice your health and well-being.** We encourage our
-grantees to do good work that is aligned with our mission, but we also encourage
-you to live a balanced life. Do not burn yourself to a crisp.
+about it: **Please do not sacrifice your health and well-being.** We encourage
+our grantees to do good work that is aligned with our mission, but we also
+encourage you to live a balanced life. Do not burn yourself to a crisp.
 
 As mentioned above, if you need to pause a grant to take extended time off, let
 us know as soon as possible and we’ll do our best to find a solution that works
@@ -201,7 +200,7 @@ of commitment with corresponding levels of financial support.
 ### Can a full-time grant be turned into a part-time grant?
 
 If you are partway through a full-time grant and want to reduce your time
-commitment, reach out to us. We can discuss adjusting your grant based on a
+commitment, [reach out to us][c]. We can discuss adjusting your grant based on a
 smaller time commitment.
 
 ### What should I do at the end of my grant?
@@ -220,3 +219,4 @@ is highly appreciated.
 Thank you!
 
 [njump]: https://njump.me/npub10pensatlcfwktnvjjw2dtem38n6rvw8g6fv73h84cuacxn4c28eqyfn34f
+[c]: /contact
