--- a/data/pages/faq-grantees.mdx
+++ b/data/pages/faq-grantees.mdx
@@ -83,9 +83,9 @@ The general requirements are as follows:
 - Work produced must be published under a free and open-source license.
 - Submit a progress report every 90 days for the duration of the grant.
 
-That’s basically it!
+That’s basically it![^fn-legal]
 
-Footnote: If you’re a lawyer, please refer to the fine print in our grant agreement.
+[^fn-legal]: As a public charity, we have to check various boxes on our side. Please refer to our grant agreement for any other details, linked at [opensats.org/transparency](/transparency)
 
 ### How does OpenSats evaluate the work done by a grantee?
 
