--- a/data/pages/faq-grantees.mdx
+++ b/data/pages/faq-grantees.mdx
@@ -53,8 +53,8 @@ Grant payments are made on the 15th of the month, give or take a day or two.
 
 ### Can I receive [insert fiat currency]?
 
-No. All grants are paid in bitcoin. We will request on-chain addresses as part
-of the grant process.
+No. All grants are paid in sats, i.e. bitcoin. We will request on-chain
+addresses as part of the grant process.
 
 ### Can the grant be received as a company, trust, LLC, or similar?
 
