--- a/data/pages/faq-grantees.mdx
+++ b/data/pages/faq-grantees.mdx
@@ -44,8 +44,10 @@ changes so that you can continue building under sustainable conditions.
 
 ### I have a question; whom should I email?
 
-All inquiries should be sent to support@opensats.org. Do not email individuals,
-or else our response may be delayed.
+All inquiries should be sent to support@opensats.org. Do not email or DM individuals,
+or else our response may be delayed.[^fn-delay]
+
+[^fn-delay]: Seriously. Depending on the individual, said delay might be weeks or months. Please only use the official channels as per [opensats.org/contact][c]
 
 ### When will I receive my first grant payment?
 
