--- a/data/blog/second-wave-of-education-grants.mdx
+++ b/data/blog/second-wave-of-education-grants.mdx
@@ -7,3 +7,158 @@ authors: ['arvin', 'dergigi']
 images: ['/static/images/blog/56-second-wave-of-education-grants.jpg']
 summary: "OpenSats is funding six more projects in our education initiative."
 ---
+
+We are pleased to announce our latest round of grants aimed at supporting
+educational projects that are enhancing the understanding and adoption of
+Bitcoin worldwide. These initiatives are making significant progress in
+educating communities, students, and developers about Bitcoin, fostering
+innovation, and promoting financial inclusion.
+
+Our [Educational Initiative](/blog/announcing-the-opensats-education-initiative)
+is dedicated to empowering individuals through education that supports the
+Bitcoin ecosystem. Each project contributes to building a more informed and
+decentralized future through open-source resources, workshops, and community
+events.
+
+We want to express our sincere gratitude to our donors for making these grants
+possible. Their generous contributions enable us to support initiatives that not
+only educate but also inspire the next generation of Bitcoin enthusiasts and
+developers.
+
+Here are the projects receiving grants in this wave:
+
+- [Bitcoin Jungle](#bitcoin-jungle)
+- [Bitcoin Indonesia](#bitcoin-indonesia)
+- [Deciphering Bitcoin](#deciphering-bitcoin)
+- [BOBSpaces Residency - Cohort 3](#bobspaces-residency---cohort-3)
+- [Statsie's Pocket Guides](#statsies-pocket-guides)
+- [Africa Free Routing](#africa-free-routing)
+
+Each of these six projects brings unique value to the global Bitcoin community.
+We are proud to support their efforts and look forward to seeing the impact they
+will have in their respective regions and beyond.
+
+<center>
+    <DonateToGeneralFundButton/>
+</center>
+
+---
+
+### Bitcoin Jungle
+
+Bitcoin Jungle is an open-source initiative to build a circular Bitcoin economy
+in Costa Rica. The project focuses on educating businesses and individuals on
+Bitcoin usage, offering free technology services like point-of-sale systems and
+wallets, and fostering community through meetups and events. Future plans
+include improving their technology stack, expanding educational resources, and
+increasing community outreach efforts. By promoting Bitcoin adoption and
+contributing to FOSS development, Bitcoin Jungle seeks to enhance
+self-sovereignty and resilience in the global Bitcoin network.
+
+Website: [bitcoinjungle.app](https://www.bitcoinjungle.app/)  
+Repository: [Bitcoin-Jungle](https://github.com/Bitcoin-Jungle)  
+License: MIT, AGPL-3.0
+
+### Bitcoin Indonesia
+
+Bitcoin Indonesia is a community-driven grassroots initiative focused on Bitcoin
+adoption across Indonesia, emphasizing education, community building, and
+open-source development. With a mission to empower the nation's 280 million
+people through financial education and access to freedom technologies like
+Bitcoin and Lightning, they provide diverse learning opportunities, from daily
+workshops and meetups at Bitcoin House Bali to outreach in schools and
+universities. Future plans include expanding their developer community, growing
+the Bitcoin circular economy, and advocating for Bitcoin-friendly policies. By
+bridging education, community support, and technological development, they aim
+to foster financial inclusion and self-sovereignty in a country where 77% of the
+population is unbanked or underbanked, highlighting Bitcoin's potential as a
+tool for economic empowerment and human rights.
+
+Website: [bitcoinindonesia.xyz](https://bitcoinindonesia.xyz/)  
+Repository: [bitcoinindo21](https://github.com/bitcoinindo21)  
+License: MIT, CC0-1.0
+
+### Deciphering Bitcoin
+
+Deciphering Bitcoin is an open-source project to create a comprehensive academic
+textbook on Bitcoin, covering its design, purpose, and societal impact. The book
+will be freely available on GitHub and accompanied by a user-friendly website
+featuring interactive courses for varying levels of technical expertise. The
+project is structured into a core section, focusing on fundamental aspects of
+Bitcoin like network architecture, mining, and wallets, and an advanced topics
+section that explores subjects like the Lightning Network and Bitcoin's role in
+financial privacy. Future plans include developing these educational resources
+to serve university students, professionals, and the broader public, offering a
+modular, interdisciplinary approach that fills a critical gap in the current
+academic landscape by providing a thorough and unbiased analysis of Bitcoin.
+
+Repository:
+[JWBurgers/deciphering-bitcoin](https://github.com/JWBurgers/deciphering-bitcoin)  
+License: CC BY-NC-ND 4.0
+
+### BOBSpaces Residency - Cohort 3
+
+BOBSpaces Residency is a Bitcoin-only incubator and co-working space in Bangkok,
+Thailand, dedicated to supporting open-source (FOSS) Bitcoin projects through
+themed cohorts. Cohort 3 focuses on Bitcoin mining, bringing together project
+leads and contributors from complementary projects such as StratumV2, Braidpool,
+and Pivotal Pleb Tech. The residency offers participants funding, workspaces,
+design support, and opportunities for collaboration to advance decentralization
+in Bitcoin mining. As part of the program, residents also engage with the local
+Bitcoin community through workshops and educational events, to enhance project
+outcomes and foster synergies among participants.
+
+Website: [bobspaces.net](https://www.bobspaces.net/)  
+Repository: [BOBSpaces](https://github.com/BOBSpaces)
+
+### Statsie's Pocket Guides
+
+Statsie's Pocket Guides are short, handmade zines that simplify complex Bitcoin
+technical topics, making them accessible to a wider audience. Covering subjects
+like BIPs, Taproot, Stratum V2, and Payjoin, these zines are printed, sewn, and
+distributed by the creator at conferences and meetups, with digital versions
+available for download. The project aims to cater to various learning styles by
+providing tangible, distraction-free educational materials that break down dense
+concepts for the technically curious. Future plans include expanding
+distribution to more U.S.-based Bitcoin events and communities while encouraging
+global adoption through downloadable, self-assembled versions.
+
+Website: [satsie.dev/zines](https://satsie.dev/zines/)  
+License: CC BY-NC-ND 4.0
+
+### Africa Free Routing
+
+Africa Free Routing is a boot camp series to train developers and fintech
+professionals across Africa on Bitcoin and the Lightning Network. Through an
+intensive four-day program, participants will learn how to integrate Lightning
+solutions into existing financial infrastructures, driving innovation and
+improving transaction efficiency on the continent. By building a skilled
+developer community, the project aims to foster local adoption of advanced
+Bitcoin technologies, attract global Lightning companies, and position Africa as
+a key hub for fintech innovation. Future boot camps are planned for Nairobi,
+Cape Town, and Accra.
+
+Website: [freerouting.africa](https://freerouting.africa/)
+
+---
+
+In addition to these grants, we are also proud to have supported the [Tokyo LN
+Summit 2024](https://bitcoinconference.tokyo/), which played a role in fostering
+collaboration and innovation within the Bitcoin Lightning Network ecosystem.
+
+We invite educators, developers, and advocates to apply for grants under the
+OpenSats Education Initiative. Together, we can create a more informed and
+empowered society. For more information and to apply, please visit
+[opensats.org/apply](/apply).
+
+Thank you for your continued support. We look forward to seeing the incredible
+educational projects that will emerge from this initiative.
+
+All of the above grants are sourced from our [General Fund](/funds/general),
+which is funded by the generosity of our donors. If you want to help us continue
+supporting free and open-source projects please consider making a donation to
+the fund:
+
+<center>
+    <DonateToGeneralFundButton/>
+</center>
