Grantee requested edit/addition

--- a/data/blog/second-wave-of-education-grants.mdx
+++ b/data/blog/second-wave-of-education-grants.mdx
@@ -102,11 +102,11 @@ BOBSpaces Residency is a Bitcoin-only incubator and co-working space in Bangkok,
 Thailand, dedicated to supporting open-source (FOSS) Bitcoin projects through
 themed cohorts. Cohort 3 focuses on Bitcoin mining, bringing together project
 leads and contributors from complementary projects such as StratumV2, Braidpool,
-and Pivotal Pleb Tech. The residency offers participants funding, workspaces,
-design support, and opportunities for collaboration to advance decentralization
-in Bitcoin mining. As part of the program, residents also engage with the local
-Bitcoin community through workshops and educational events, to enhance project
-outcomes and foster synergies among participants.
+and Pivotal Pleb Tech (the Loki board). The residency offers participants
+funding, workspaces, design support, and opportunities for collaboration to
+advance decentralization in Bitcoin mining. As part of the program, residents
+also engage with the local Bitcoin community through workshops and educational
+events, to enhance project outcomes and foster synergies among participants.
 
 Website: [bobspaces.net](https://www.bobspaces.net/)  
 Repository: [BOBSpaces](https://github.com/BOBSpaces)
