Update authors (Dread)
Co-authored-by: Gigi <109058+dergigi@users.noreply.github.com>

--- a/data/blog/second-wave-of-education-grants.mdx
+++ b/data/blog/second-wave-of-education-grants.mdx
@@ -3,7 +3,7 @@ title: "Second Wave of Education Grants"
 date: '2024-09-27'
 tags: ['OpenSats', 'grants', 'bitcoin', 'education', 'wave']
 draft: false
-authors: ['arvin', 'dergigi']
+authors: ['arvin', 'dergigi', 'dread']
 images: ['/static/images/blog/56-second-wave-of-education-grants.jpg']
 summary: "OpenSats is funding six more projects in our education initiative."
 ---
