--- a/data/blog/second-wave-of-education-grants.mdx
+++ b/data/blog/second-wave-of-education-grants.mdx
@@ -34,7 +34,7 @@ Here are the projects receiving grants in this wave:
 - [Statsie's Pocket Guides](#statsies-pocket-guides)
 - [Africa Free Routing](#africa-free-routing)
 
-Each of these six projects brings unique value to the global Bitcoin community.
+Each of these projects brings unique value to the global Bitcoin community.
 We are proud to support their efforts and look forward to seeing the impact they
 will have in their respective regions and beyond.
 
