Link to resources instead of main page

--- a/data/blog/second-wave-of-education-grants.mdx
+++ b/data/blog/second-wave-of-education-grants.mdx
@@ -138,7 +138,7 @@ Bitcoin technologies, attract global Lightning companies, and position Africa as
 a key hub for fintech innovation. Future boot camps are planned for Nairobi,
 Cape Town, and Accra.
 
-Website: [freerouting.africa](https://freerouting.africa/)
+Website: [freerouting.africa](https://freerouting.africa/lightning-network-node-resources/)
 
 ---
 
