--- a/data/blog/second-wave-of-education-grants.mdx
+++ b/data/blog/second-wave-of-education-grants.mdx
@@ -31,7 +31,7 @@ Here are the projects receiving grants in this wave:
 - [Bitcoin Indonesia](#bitcoin-indonesia)
 - [Deciphering Bitcoin](#deciphering-bitcoin)
 - [BOBSpaces Residency - Cohort 3](#bobspaces-residency---cohort-3)
-- [Statsie's Pocket Guides](#statsies-pocket-guides)
+- [Satsie's Pocket Guides](#satsies-pocket-guides)
 - [Africa Free Routing](#africa-free-routing)
 
 Each of these projects brings unique value to the global Bitcoin community.
@@ -111,9 +111,9 @@ events, to enhance project outcomes and foster synergies among participants.
 Website: [bobspaces.net](https://www.bobspaces.net/)  
 Repository: [BOBSpaces](https://github.com/BOBSpaces)
 
-### Statsie's Pocket Guides
+### Satsie's Pocket Guides
 
-Statsie's Pocket Guides are short, handmade zines that simplify complex Bitcoin
+Satsie's Pocket Guides are short, handmade zines that simplify complex Bitcoin
 technical topics, making them accessible to a wider audience. Covering subjects
 like BIPs, Taproot, Stratum V2, and Payjoin, these zines are printed, sewn, and
 distributed by the creator at conferences and meetups, with digital versions
