--- a/data/pages/faq-grantees.mdx
+++ b/data/pages/faq-grantees.mdx
@@ -105,11 +105,11 @@ evaluate progress.
 
 ### What does an ideal progress report look like?
 
-An ideal progress report is:
-
 - Written in Markdown format
 - Between 1 and 3 pages
-- Enriched with links to pull requests, commits, and other relevant work produced.
+- Enriched with the most relevant links to pull requests, commits, and other work produced.
+- Has a brief summary in each section before diving into links in order to help us contextualize the links provided.
+- Tells us if you are on track, if you had challenges, how you (will) overcome the challenges, if you are pleased or displeased with the progress.
 
 Every progress report should show clearly the connection between what was
 planned in the application or previous report(s) and the work done since.
