--- a/data/pages/faq-grantees.mdx
+++ b/data/pages/faq-grantees.mdx
@@ -28,6 +28,7 @@ changes so that you can continue building under sustainable conditions.
 - [What are the requirements of my grant?](#what-are-the-requirements-of-my-grant)
 - [How does OpenSats evaluate the work done by a grantee?](#how-does-opensats-evaluate-the-work-done-by-a-grantee)
 - [What does an ideal progress report look like?](#what-does-an-ideal-progress-report-look-like)
+- [What does a poor progress report look like?](#what-does-a-poor-progress-report-look-like)
 - [Does OpenSats provide feedback on every progress report submitted?](#does-opensats-provide-feedback-on-every-progress-report-submitted)
 - [What happens if the deliverables, milestones, or timelines proposed in the application are changed or not delivered?](#what-happens-if-the-deliverables-milestones-or-timelines-proposed-in-the-application-are-changed-or-not-delivered)
 - [Is it okay to work on something that isn’t part of the grant agreement or even pivot to another project?](#is-it-okay-to-work-on-something-that-isnt-part-of-the-grant-agreement-or-even-pivot-to-another-project)
@@ -117,6 +118,11 @@ planned in the application or previous report(s) and the work done since.
 We encourage you to openly discuss any obstacles that may have prevented you
 from reaching previously established milestones, and/or why your previously
 outlined plans changed. Remember that we're here to help, not to judge.
+
+### What does a poor progress report look like?
+
+- A long wall of text talking about the work but not showing any of the work through relevant links to pull requests and commits.
+- Dives directly and only into a long list of links to pull requests and commits without some contextulization of the work done in those links.
 
 ### Does OpenSats provide feedback on every progress report submitted?
 
