--- a/data/pages/faq-grantees.mdx
+++ b/data/pages/faq-grantees.mdx
@@ -94,7 +94,7 @@ That’s basically it![^fn-legal]
 Every grantee must submit a progress report every 90 days. A markdown template
 is provided when we request your first report.
 
-If your grant started in March, for example, the 1st report will be due anytime during the month of June and should cover the work done from March through May, and so on and so forth. You have a 30-day window to work on the report and we appreciate if you keep them on schedule.
+If your grant started in March, for example, the 1st report will be due anytime during the month of June and should cover the work done from March through May, and so on and so forth. You have a 30-day window to submit the report and we appreciate if you submit them on time.
 
 Reports are evaluated by:
 
