--- a/data/pages/faq-grantees.mdx
+++ b/data/pages/faq-grantees.mdx
@@ -122,10 +122,7 @@ outlined plans changed. Remember that we're here to help, not to judge.
 
 ### Does OpenSats provide feedback on every progress report submitted?
 
-Not necessarily. We review all reports, but this work is mostly done by a team
-of volunteers with technical expertise in the area of your project. Given the
-nature of this volunteer work, there is not a set schedule for this review to
-happen, so please do not expect feedback for every report, immediate or not.
+Not necessarily. Every report is reviewed but we do not provide feedback on every report as we review hundreds each quarter. If you are looking for specific feedback, please call it out as part of the report.
 
 We will contact you if we have any questions or concerns about your report.
 
