--- a/data/pages/faq-grantees.mdx
+++ b/data/pages/faq-grantees.mdx
@@ -108,7 +108,7 @@ evaluate progress.
 - Written in Markdown format
 - Between 1 and 3 pages
 - Enriched with the most relevant links to pull requests, commits, and other work produced.
-- Has a brief summary in each section before diving into links in order to help us contextualize the links provided.
+- Has a brief summary in each section before providing additional details (links, PRs, etc).
 - Tells us if you are on track, if you had challenges, how you (will) overcome the challenges, if you are pleased or displeased with the progress.
 
 Every progress report should show clearly the connection between what was
