Minor FAQ update (#336)
Co-authored-by: Jon Atack <jon@atack.com>

--- a/data/pages/faq-grantees.mdx
+++ b/data/pages/faq-grantees.mdx
@@ -94,6 +94,8 @@ That’s basically it![^fn-legal]
 Every grantee must submit a progress report every 90 days. A markdown template
 is provided when we request your first report.
 
+If your grant started in March, for example, the 1st report will be due anytime during the month of June and should cover the work done from March through May, and so on and so forth. You have a 30-day window to submit the report and we appreciate if you submit them on time.
+
 Reports are evaluated by:
 
 - A technical committee
@@ -120,10 +122,7 @@ outlined plans changed. Remember that we're here to help, not to judge.
 
 ### Does OpenSats provide feedback on every progress report submitted?
 
-Not necessarily. We review all reports, but this work is mostly done by a team
-of volunteers with technical expertise in the area of your project. Given the
-nature of this volunteer work, there is not a set schedule for this review to
-happen, so please do not expect feedback for every report, immediate or not.
+Not necessarily. Every report is reviewed but we do not provide feedback on every report as we review hundreds each quarter. If you are looking for specific feedback, please call it out as part of the report.
 
 We will contact you if we have any questions or concerns about your report.
 
