--- a/data/pages/faq-grantees.mdx
+++ b/data/pages/faq-grantees.mdx
@@ -122,7 +122,7 @@ outlined plans changed. Remember that we're here to help, not to judge.
 ### What does a poor progress report look like?
 
 - A long wall of text talking about the work but not showing any of the work through relevant links to pull requests and commits.
-- Dives directly and only into a long list of links to pull requests and commits without some contextulization of the work done in those links.
+- Dives directly and only into a long list of links to pull requests and commits without some contextualization of the work done in those links.
 
 ### Does OpenSats provide feedback on every progress report submitted?
 
