Update last paragraph

--- a/data/pages/faq-grantees.mdx
+++ b/data/pages/faq-grantees.mdx
@@ -214,14 +214,18 @@ smaller time commitment.
 
 Send in your final progress report.
 
-### I have general praise or criticism regarding OpenSats. What should I do?
+---
+
+We hope the above is helpful. Make sure to have a look at our [General
+FAQ](/faq) too, as well as our [application](/apply#criteria) and [selection
+criteria](/selection).
 
 If you have something good to say about us, feel free to say it publicly and tag
 us [on nostr][njump].
 
-If you have something that irks you or any suggestions for improvements, please
-let us know via support@opensats.org. We are learning as we go, so any feedback
-is highly appreciated.
+If you have constructive criticism or suggestions for improvements, please let
+us know via support@opensats.org. We are learning as we go, so any feedback is
+highly appreciated.
 
 Thank you!
 
