Formatting & re-word

--- a/data/pages/faq-grantees.mdx
+++ b/data/pages/faq-grantees.mdx
@@ -110,11 +110,18 @@ evaluate progress.
 
 ### What does an ideal progress report look like?
 
+An ideal progress report is:
+
 - Written in Markdown format
 - Between 1 and 3 pages
-- Enriched with the most relevant links to pull requests, commits, and other work produced.
-- Has a brief summary in each section before providing additional details (links, PRs, etc).
-- Tells us if you are on track, if you had challenges, how you (will) overcome the challenges, if you are pleased or displeased with the progress.
+- Enriched with the most relevant links to pull requests, commits, and other work produced
+
+In the best case, each progress report:
+
+- Has a brief summary in each section before providing additional details
+- Tells us if you are on track
+- Describes challenges, and how you overcame them
+- Includes if you are pleased or displeased with the progress you made
 
 Every progress report should show clearly the connection between what was
 planned in the application or previous report(s) and the work done since.
@@ -125,8 +132,15 @@ outlined plans changed. Remember that we're here to help, not to judge.
 
 ### What does a poor progress report look like?
 
-- A long wall of text talking about the work but not showing any of the work through relevant links to pull requests and commits.
-- Dives directly and only into a long list of links to pull requests and commits without some contextualization of the work done in those links.
+A poor progress report is:
+
+- Hard to read
+- Hard to understand
+- An incredibly long wall of text
+- Not showing any of the actual work done
+- Missing links to pull requests and commits
+- Missing context, summaries, and explanations, i.e. is only a long list of links to pull requests and commits without anything else
+
 
 ### Does OpenSats provide feedback on every progress report submitted?
 
