Link to question above

--- a/data/pages/faq-grantees.mdx
+++ b/data/pages/faq-grantees.mdx
@@ -141,6 +141,8 @@ A poor progress report is:
 - Missing links to pull requests and commits
 - Missing context, summaries, and explanations, i.e. is only a long list of links to pull requests and commits without anything else
 
+Refer to the question above for what a [good progress
+report](#what-does-an-ideal-progress-report-look-like) looks like.
 
 ### Does OpenSats provide feedback on every progress report submitted?
 
