--- a/data/blog/dusty-daemon-receives-lts-grant.mdx
+++ b/data/blog/dusty-daemon-receives-lts-grant.mdx
@@ -7,3 +7,43 @@ authors: ['btcschellingpt', 'arvin', 'dergigi']
 images: ['/static/images/blog/TODO.jpg']
 summary: "OpenSats welcomes Dusty Daemon as an LTS Grantee."
 ---
+
+OpenSats is excited to announce long-term support for the main driving force
+behind Splicing on the Lightning Network, [Dusty
+Daemon](https://github.com/ddustin). Dusty has contributed significantly to the
+Lightning Network [specifications](https://github.com/lightning/bolts/pull/863)
+and the design and implementation of Splicing.
+
+[Splicing](https://lightningsplice.com/splicing_explained.html) enhances the
+usability of the Lightning Network by allowing users to modify channel sizes
+instead of having to close and create new channels when size changes are
+required. This reduces the on-chain transactions required and improves the
+usability of the Lightning Network.
+
+With LTS support from OpenSats, Dusty will help extend the Splicing
+implementation across additional Lightning implementations and commence building
+[Splice Script](https://www.youtube.com/live/nXbjP2TSajE?t=849s). This new
+toolset will provide a straightforward mechanism for users and application
+developers to utilize Splicing in more complex ways. The expected outcomes
+include further reductions in on-chain transactions, improved transactional
+privacy and simplified in-channel and on-chain interaction.
+
+>The euphoria I get from contributing to something as important as I believe
+>Lightning is, is incredible --- I'd trade all those lost savings and sleepless
+>nights for it all over again.
+>
+>--Dusty Daemon
+
+Our mission at OpenSats is to support the builders and maintainers of [critical
+open-source infrastructure](/blog/bitcoin-infrastructure-this-decade) within the
+Bitcoin ecosystem, paving the way for innovations yet to come.
+
+The OpenSats [Long-Term Support
+program](/blog/announcing-lts-grant-program-to-support-bitcoin-core-contributors)
+is made possible by the generosity of our donors. To continue supporting
+contributors like Dusty and our [other LTS grantees](/tags/lts), consider making
+a donation to the [General Fund](/projects/general_fund):
+
+<center>
+    <DonateToGeneralFundButton/>
+</center>
