Add missing closing quote for date.

--- a/data/blog/dusty-daemon-receives-lts-grant.mdx
+++ b/data/blog/dusty-daemon-receives-lts-grant.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Long-Term Support For Dusty Daemon"
-date: '2024-10-02
+date: '2024-10-02'
 tags: ['OpenSats', 'grants', 'bitcoin', 'LTS']
 draft: false
 authors: ['btcschellingpt', 'arvin', 'dergigi']
