--- a/data/blog/dusty-daemon-receives-lts-grant.mdx
+++ b/data/blog/dusty-daemon-receives-lts-grant.mdx
@@ -32,7 +32,7 @@ privacy and simplified in-channel and on-chain interaction.
 >Lightning is, is incredible --- I'd trade all those lost savings and sleepless
 >nights for it all over again.
 >
-><cite>-fiatjaf</cite>
+><cite>—Dusty Daemon</cite>
 
 Our mission at OpenSats is to support the builders and maintainers of [critical
 open-source infrastructure](/blog/bitcoin-infrastructure-this-decade) within the
