--- a/data/blog/dusty-daemon-receives-lts-grant.mdx
+++ b/data/blog/dusty-daemon-receives-lts-grant.mdx
@@ -29,7 +29,7 @@ include further reductions in on-chain transactions, improved transactional
 privacy and simplified in-channel and on-chain interaction.
 
 >The euphoria I get from contributing to something as important as I believe
->Lightning is, is incredible --- I'd trade all those lost savings and sleepless
+>Lightning is, is incredible ⸻ I'd trade all those lost savings and sleepless
 >nights for it all over again.
 >
 ><cite>—Dusty Daemon</cite>
